--- a/app/globals.css
+++ b/app/globals.css
@@ -12,15 +12,71 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+@font-face {
+  font-family: "Gilroy-Medium";
+  src: url("../public/font/Gilroy-Medium.ttf");
+}
+
+* {
+  user-select: none;
 }
 
 body {
-  background: var(--background);
+  background: white;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 96px;
+}
+
+.edge-blur {
+  position: absolute;
+  top: 0;
+  width: 10vw;
+  height: 100%;
+  pointer-events: none;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  contain: paint;
+  will-change: backdrop-filter;
+}
+
+.edge-blur.left {
+  left: 0;
+  background: linear-gradient(
+    to right,
+    rgba(255,255,255,1),
+    rgba(255,255,255,0.6),
+    rgba(255,255,255,0.2),
+    transparent
+  );
+}
+
+.edge-blur.right {
+  right: 0;
+  background: linear-gradient(
+    to left,
+    rgba(255,255,255,1),
+    rgba(255,255,255,0.6),
+    rgba(255,255,255,0.2),
+    transparent
+  );
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
